--- a/index.html
+++ b/index.html
@@ -592,6 +592,20 @@
                         <p class="text-purple-100">Explorez la plateforme en tant qu'utilisateur</p>
                     </div>
                     <div class="p-6">
+                        <div class="bg-yellow-50 border-l-4 border-yellow-400 p-4 mb-6 rounded">
+                            <div class="flex">
+                                <div class="flex-shrink-0">
+                                    <i class="fas fa-info-circle text-yellow-500"></i>
+                                </div>
+                                <div class="ml-3">
+                                    <p class="text-sm text-yellow-700">
+                                        <span class="font-medium">Identifiants de connexion :</span><br>
+                                        Email: <span class="font-mono">admin@gmail.com</span><br>
+                                        Mot de passe: <span class="font-mono">@Admin12345</span>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
                         <ul class="space-y-3 mb-8">
                             <li class="flex items-start">
                                 <i class="fas fa-check-circle text-green-500 mt-1 mr-2"></i>
@@ -836,8 +850,8 @@
                     Découvrir les formules
                     <i class="fas fa-arrow-right ml-2"></i>
                 </a>
-                <a href="#demo" class="inline-flex items-center justify-center border-2 border-white text-white hover:bg-white hover:text-purple-600 px-8 py-4 rounded-full font-bold text-lg transition transform hover:scale-105">
-                    <i class="fas fa-play-circle mr-2"></i>
+                <a href="#demo" class="inline-flex items-center justify-center bg-yellow-400 hover:bg-yellow-300 text-gray-900 border-2 border-yellow-400 hover:border-yellow-300 px-8 py-4 rounded-full font-bold text-lg transition-all transform hover:scale-105 hover:shadow-lg hover:shadow-yellow-200/50 animate-pulse">
+                    <i class="fas fa-play-circle mr-2 text-xl"></i>
                     Voir la démo
                 </a>
             </div>
